--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,16 @@
         <version>5.3.9</version>
     </dependency>
     <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+        <version>1.9.7</version>
+        <scope>runtime</scope>
+    </dependency>
+    <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
         <version>8.0.26</version>
     </dependency>
-
     <dependency>
         <groupId>com.mchange</groupId>
         <artifactId>c3p0</artifactId>
