--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,20 @@
         <version>5.3.9</version>
     </dependency>
     <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aspects</artifactId>
+        <version>5.3.9</version>
+    </dependency>
+    <dependency>
         <groupId>org.aspectj</groupId>
         <artifactId>aspectjweaver</artifactId>
         <version>1.9.7</version>
         <scope>runtime</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjrt</artifactId>
+        <version>1.5.4</version>
     </dependency>
     <dependency>
         <groupId>mysql</groupId>
