数据库访问示例

--- a/.net笔记/SpringDotnetDemo/SpringDotnetDemo/App.config
+++ b/.net笔记/SpringDotnetDemo/SpringDotnetDemo/App.config
@@ -10,6 +10,8 @@
     <!--Spring对象容器的配置-->
     <context>
       <resource uri="~/Conf/Context.xml"/><!--主配置文件路径-->
+      <resource uri="~/Conf/DbProvider.xml"/>
+      <resource uri="~/Conf/Dao.xml"/>
     </context>
   </spring>
   <startup>
