事务管理基于Xml

--- a/.net笔记/SpringDotnetDemo/SpringDotnetDemo/App.config
+++ b/.net笔记/SpringDotnetDemo/SpringDotnetDemo/App.config
@@ -12,6 +12,7 @@
       <resource uri="~/Conf/Context.xml"/><!--主配置文件路径-->
       <resource uri="~/Conf/DbProvider.xml"/>
       <resource uri="~/Conf/Dao.xml"/>
+      <resource uri="~/Conf/Service.xml"/>
     </context>
   </spring>
   <startup>
