--- a/.net笔记/SpringDotnetDemo/SpringDotnetDemo/SpringDotnetDemo.csproj
+++ b/.net笔记/SpringDotnetDemo/SpringDotnetDemo/SpringDotnetDemo.csproj
@@ -57,6 +57,8 @@
   <ItemGroup>
     <Compile Include="Ado.net\Dao\EmployeeInfoDao.cs" />
     <Compile Include="Ado.net\Dao\IEmployeeInfoDao.cs" />
+    <Compile Include="Ado.net\Service\EmployeeInfoService.cs" />
+    <Compile Include="Ado.net\Service\IEmployeeInfoService.cs" />
     <Compile Include="AOPDemo\AroundAdvice.cs" />
     <Compile Include="AOPDemo\ConsoleLoggingAroundAdvice .cs" />
     <Compile Include="AOPDemo\HelloWorldSpeaker .cs" />
@@ -64,7 +66,6 @@
     <Compile Include="AOPDemo\ServiceCommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserInfoDal.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -80,6 +81,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Conf\DbProvider.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Conf\Service.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
