--- a/.net笔记/SpringDotnetDemo/SpringDotnetDemo/SpringDotnetDemo.csproj
+++ b/.net笔记/SpringDotnetDemo/SpringDotnetDemo/SpringDotnetDemo.csproj
@@ -44,8 +44,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\Spring.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Spring.Data">
-      <HintPath>..\..\..\..\..\学习资料\.net相关\SpringDotnetDemo\lib\Spring.Data.dll</HintPath>
+    <Reference Include="Spring.Data, Version=1.3.2.20943, Culture=neutral, PublicKeyToken=65e474d141e25e07, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\Spring.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
