--- a/.net笔记/Code/AutofacDemo/AutofacDemo/AutofacDemo.csproj
+++ b/.net笔记/Code/AutofacDemo/AutofacDemo/AutofacDemo.csproj
@@ -17,10 +17,17 @@
     <PackageReference Include="Autofac" Version="6.3.0" />
     <PackageReference Include="Autofac.Configuration" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Xml" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="Conf\AutofacJson.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Conf\AutofacXml.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Conf\moduleConfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
