--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /.net笔记/Note/Autofac笔记.assets
+/.net笔记/Note/WebApi整合Autofac.assets
