WebApi使用JWT进行身份验证

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /.net笔记/Note/Autofac笔记.assets
 /.net笔记/Note/WebApi整合Autofac.assets
 /.net笔记/Note/注意事项.assets
+/.net笔记/Note/WebApi使用JWT进行身份验证.assets
