--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ FodyWeavers.xsd
 /.net笔记/Note/WebApi整合Autofac.assets
 /.net笔记/Note/注意事项.assets
 /.net笔记/Note/WebApi使用JWT进行身份验证.assets
+/java笔记/Source Code/SpringCloudDemo/SpringBootDemo2/target/classes
+/java笔记/Source Code/SpringCloudDemo/SpringBootDemo1/target/classes
