--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ FodyWeavers.xsd
 /.net笔记/Note/WebApi使用JWT进行身份验证.assets
 /java笔记/Source Code/SpringCloudDemo/SpringBootDemo2/target/classes
 /java笔记/Source Code/SpringCloudDemo/SpringBootDemo1/target/classes
+/java笔记/Source Code/SpringCloudDemo/GatewayDemo/target/classes
