--- a/java笔记/Source Code/SpringAMQPdemo/consumer/src/main/resources/application.yml
+++ b/java笔记/Source Code/SpringAMQPdemo/consumer/src/main/resources/application.yml
@@ -6,8 +6,11 @@ logging:
     dateformat: MM-dd HH:mm:ss:SSS
 spring:
   rabbitmq:
-    host: 192.168.121.108 # rabbitMQ的ip地址
+    host: localhost # rabbitMQ的ip地址
     port: 5672 # 端口
     username: root
     password: root
     virtual-host: /
+    listener:
+      simple:
+        prefetch: 1 # 每次只能获取一条消息，处理完成才能获取下一个消息
