--- a/java笔记/Source Code/SpringAMQPdemo/publisher/src/main/resources/application.yml
+++ b/java笔记/Source Code/SpringAMQPdemo/publisher/src/main/resources/application.yml
@@ -6,7 +6,7 @@ logging:
     dateformat: MM-dd HH:mm:ss:SSS
 spring:
   rabbitmq:
-    host: 192.168.121.108 # rabbitMQ的ip地址
+    host: localhost # rabbitMQ的ip地址
     port: 5672 # 端口
     username: root
     password: root
